--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,9 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_RELEASE_STORE_FILE=my-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=Vamshipenti@2254
+MYAPP_RELEASE_KEY_PASSWORD=Vamshipenti@2254
+
